--- a/app/globals.css
+++ b/app/globals.css
@@ -32,12 +32,7 @@ p {
 
 .title-underline-lg {
 	&::after {
-		content: "";
-		display: block;
-		width: 3.5rem;
-		height: 0.5rem;
-		background-color: var(--primary-800);
-		margin-top: 1rem;
+		@apply mt-4 block h-[.4rem] w-[2.5rem] bg-primary-800 content-[""] md:h-[0.5rem] md:w-[3.5rem];
 	}
 }
 
@@ -67,10 +62,6 @@ p {
 /* .web {
   @apply opacity-20 w-[135rem] h-[135rem] bg-primary-800 rounded-full absolute -right-[65rem] -bottom-[60rem];
 } */
-
-.link {
-	@apply block font-light text-neutral-800 underline;
-}
 
 .form-input {
 	&.active {
@@ -239,5 +230,5 @@ input:not(:placeholder-shown) {
 }
 
 .focus {
-	@apply outline-none focus:outline-2 focus:outline-primary-800;
+	@apply focus:outline-none  focus:ring-2 focus:ring-primary-700;
 }
