--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
 	--bg-light: #e9f5f5;
 	--text-dark: #0c566d;
 	--primary-800: #1db1ab;
+	--primary-700: #51c2be;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,7 +26,7 @@ p {
 }
 
 .layout-wrapper {
-	@apply mx-auto max-w-[120rem]  px-6 md:px-10 xl:pl-[8.5rem];
+	@apply mx-auto max-w-[120rem]  px-6 md:px-14 xl:pl-[9.5rem];
 }
 
 .title-underline-lg {
@@ -233,4 +234,60 @@ input:not(:placeholder-shown) {
 
 .focus {
 	@apply focus:outline-none  focus:ring-2 focus:ring-primary-700;
+}
+
+/* 
+Animated checkMark 
+https://codepen.io/haniotis/pen/KwvYLO
+*/
+
+.checkmark {
+	width: 1.25rem;
+	height: 1.25rem;
+	border-radius: 50%;
+	display: block;
+	stroke-width: 2;
+	stroke: #fff;
+	stroke-miterlimit: 10;
+	box-shadow: inset 0px 0px 0px var(--primary-700);
+	animation: fill 0.4s ease-in-out 0.4s forwards, scale 0.3s ease-in-out 0.9s both;
+}
+
+.checkmark__circle {
+	stroke-dasharray: 166;
+	stroke-dashoffset: 166;
+	stroke-width: 2;
+	stroke-miterlimit: 10;
+	stroke: var(--primary-700);
+	fill: none;
+	animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
+}
+
+.checkmark__check {
+	transform-origin: 50% 50%;
+	stroke-dasharray: 48;
+	stroke-dashoffset: 48;
+	animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
+}
+
+@keyframes stroke {
+	100% {
+		stroke-dashoffset: 0;
+	}
+}
+
+@keyframes scale {
+	0%,
+	100% {
+		transform: none;
+	}
+	50% {
+		transform: scale3d(1.1, 1.1, 1);
+	}
+}
+
+@keyframes fill {
+	100% {
+		box-shadow: inset 0px 0px 0px 30px var(--primary-700);
+	}
 }
