--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@ p {
 }
 
 .layout-wrapper {
-	@apply mx-auto max-w-[120rem]  px-6 md:px-14 xl:pl-[9.5rem];
+	@apply mx-auto max-w-[110rem]  px-6 md:px-14;
 }
 
 .title-underline-lg {
